@@ -23,7 +23,6 @@
     <ProjectGuid>{6A0A5D13-C46F-48D9-8FEA-A55CCDFD7BCB}</ProjectGuid>
     <RootNamespace>cobcrun</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
